revised html contents

--- a/java/org/jax/mgi/shr/dbutils/types/package.html
+++ b/java/org/jax/mgi/shr/dbutils/types/package.html
@@ -5,6 +5,7 @@
 <body bgcolor="white">
 
 Provides for database types validation
+<h2>Related Documentation</h2>
 
 <!-- Put @see and @since tags down here. -->
 
