fixed html content to suit javadocs command

--- a/java/org/jax/mgi/shr/dbutils/types/package.html
+++ b/java/org/jax/mgi/shr/dbutils/types/package.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="white">
 
-Provides for database types validation
+Provides validation of database types.
 <h2>Related Documentation</h2>
 
 <!-- Put @see and @since tags down here. -->
