--- a/java/org/jax/mgi/shr/bucketizer/package.html
+++ b/java/org/jax/mgi/shr/bucketizer/package.html
@@ -4,7 +4,7 @@
 </head>
 <body bgcolor="white">
 
-An abstract framework for comparing members of two datasets and finding clusters of elements from both sets that are all related to each based upon their shared attribute values.
+An abstract framework for comparing members of two datasets and finding clusters of elements from both that are related to each other based upon their shared attribute values.
 <h2>Related Documentation</h2>
 
 <ul>
