--- a/java/org/jax/mgi/shr/bucketizer/package.html
+++ b/java/org/jax/mgi/shr/bucketizer/package.html
@@ -11,7 +11,7 @@ An abstract framework for comparing members of two datasets and finding clusters
   <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/bucketizerDesign.pdf">design document</a>
   <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_AbstractBucketizer.gif">Abstract Bucketizer class diagram</a>
   <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_BucketItem.gif">BucketItem class diagram</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_GeneralPurposeBucketizer.gif">Genmeral Purpose Bucketizer class diagram</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_GeneralPurposeBucketizer.gif">General Purpose Bucketizer class diagram</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
