--- a/java/org/jax/mgi/shr/dbutils/bcp/package.html
+++ b/java/org/jax/mgi/shr/dbutils/bcp/package.html
@@ -8,10 +8,10 @@ Provides for bcp access to the database.
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/bcpDesign.pdf">design document</a>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/configuration.htm">configuration parameters</a>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/examples.htm">code examples</a>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/Class_bcp.gif">class diagram</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/bcpDesign.pdf">Design document</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/configuration.htm">Configuration parameters</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/examples.htm">Code examples</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/bcp/Class_bcp.gif">Class diagram</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
