--- a/java/org/jax/mgi/shr/dbutils/dao/package.html
+++ b/java/org/jax/mgi/shr/dbutils/dao/package.html
@@ -7,10 +7,10 @@ Provides for transparent persistency to the database using dao classes.
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/daoDesign.pdf">design document</a>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/examples.htm">code examples</a>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/Class_dao.gif">class diagram</a>
-  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/Sequence_SQLStreamUpdate_BatchStrategy.gif">sequence diagram for updating a DAO using a JDBC batch strategy</a>  
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/daoDesign.pdf">Design document</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/examples.htm">Code examples</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/Class_dao.gif">Class diagram</a>
+  <li><a href="../../../../../../../system_docs/org/jax/mgi/shr/dbutils/dao/Sequence_SQLStreamUpdate_BatchStrategy.gif">Sequence diagram for updating a DAO using a JDBC batch strategy</a>  
 </ul>
 
 <!-- Put @see and @since tags down here. -->
