--- a/java/org/jax/mgi/shr/dbutils/package.html
+++ b/java/org/jax/mgi/shr/dbutils/package.html
@@ -8,11 +8,11 @@ Provides for database access via inline SQL, JDBC batch and scripting and provid
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/dbutilsDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/configuration.htm">configuration parameters </a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/examples.htm">code examples</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/Class_SqlDataManager.gif">class diagram for SQLDataManager and Table classes </a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/Class_ResultsNavigator.gif">class diagram for ResultsNavigator and related classes</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/dbutilsDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/configuration.htm">Configuration parameters </a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/examples.htm">Code examples</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/Class_SqlDataManager.gif">Class diagram for SQLDataManager and Table classes </a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dbutils/Class_ResultsNavigator.gif">Class diagram for ResultsNavigator and related classes</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
