--- a/java/org/jax/mgi/shr/exception/package.html
+++ b/java/org/jax/mgi/shr/exception/package.html
@@ -8,9 +8,9 @@ Provides for reusable base clases for exception classes and exception factory cl
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/exception/exceptionDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/exception/examples.htm">code examples</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/exception/Class_exception.gif">class diagram</a>  
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/exception/exceptionDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/exception/examples.htm">Code examples</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/exception/Class_exception.gif">Class diagram</a>  
 </ul>
 
 <!-- Put @see and @since tags down here. -->
