--- a/java/org/jax/mgi/shr/config/package.html
+++ b/java/org/jax/mgi/shr/config/package.html
@@ -8,8 +8,8 @@ Provides for the accessing of configuration data originating from configuration 
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/config/configDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/config/Class_config.gif">class diagram</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/config/configDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/config/Class_config.gif">Class diagram</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
