--- a/java/org/jax/mgi/shr/dto/package.html
+++ b/java/org/jax/mgi/shr/dto/package.html
@@ -8,7 +8,7 @@ Provides a way to represent and transfer query data between the presentation tie
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dto/dtoDesign.pdf">design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/dto/dtoDesign.pdf">Design document</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
