--- a/java/org/jax/mgi/shr/graphs/package.html
+++ b/java/org/jax/mgi/shr/graphs/package.html
@@ -8,10 +8,10 @@ A set of classes for creating and traversing graphs.
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/bucketizerDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_AbstractBucketizer.gif">Abstract Bucketizer class diagram</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_BucketItem.gif">BucketItem class diagram</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_GeneralPurposeBucketizer.gif">Genmeral Purpose Bucketizer class diagram</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/bucketizerDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_AbstractBucketizer.gif">Class diagram Abstract Bucketizer</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_BucketItem.gif">Class diagram BucketItem</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/bucketizer/Class_GeneralPurposeBucketizer.gif">Class diagram General Purpose Bucketizer</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
