--- a/java/org/jax/mgi/shr/sva/package.html
+++ b/java/org/jax/mgi/shr/sva/package.html
@@ -8,8 +8,8 @@ An abstract framework for representing data as a collection of named set valued 
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/sva/svaDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/sva/Class_sva.gif">class diagram</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/sva/svaDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/sva/Class_sva.gif">Class diagram</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
