--- a/java/org/jax/mgi/shr/types/package.html
+++ b/java/org/jax/mgi/shr/types/package.html
@@ -8,8 +8,8 @@ Provides conversion functionality for designated data types between raw form and
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/types/typesDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/types/Class_types.gif">class diagram</a>  
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/types/typesDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/types/Class_types.gif">Class diagram</a>  
 </ul>
 
 <!-- Put @see and @since tags down here. -->
