changed to suit revised design

--- a/java/org/jax/mgi/shr/ioutils/package.html
+++ b/java/org/jax/mgi/shr/ioutils/package.html
@@ -8,9 +8,9 @@ Provides for file access and file content iterations.
 <h2>Related Documentation</h2>
 
 <ul>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/ioutilsDesign.pdf">design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/configuration.htm">configuration parameter </a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/Class_ioutils.gif">class diagram</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/ioutilsDesign.pdf">Design document</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/configuration.htm">Configuration parameter </a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/Class_ioutils.gif">Class diagram</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
