modified to include new xml input class documentation

--- a/java/org/jax/mgi/shr/ioutils/package.html
+++ b/java/org/jax/mgi/shr/ioutils/package.html
@@ -9,8 +9,10 @@ Provides for file access and file content iterations.
 
 <ul>
   <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/ioutilsDesign.pdf">Design document</a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/configuration.htm">Configuration parameter </a>
-  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/Class_ioutils.gif">Class diagram</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/configuration_text_input.htm">Configuration parameters for text input classes</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/configuration_xml_input.htm">Configuration parameters for xml input classes</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/Class_text.gif">Class diagram for text input classes</a>
+  <li><a href="../../../../../../system_docs/org/jax/mgi/shr/ioutils/Class_xml.gif">Class diagram for xml input classes</a>
 </ul>
 
 <!-- Put @see and @since tags down here. -->
